--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -2,7 +2,7 @@ body,p,h1,h2,h3,h4,h5,h6,ul,ol,dl,dd,hr,input,textarea,button,option,fieldset,le
 a{text-decoration:none; color:#666;}
 li{list-style:none;}
 /*img{display:block;}*/
-h1,h2,h3,h4,h5,h6,b,strong{font-weight:normal;}
+h1,h2,h3,h4,h5,h6,strong{font-weight:normal;}
 em,i{font-style:normal;}
 a,input{outline:none;}
 body{font:12px "微软雅黑";}
