购物车功能的实现（一）

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -626,6 +626,7 @@ bigBox_left_t_2{
 .section_buy{
     float: right;
     padding-top: 3px;
+    cursor: pointer;
     padding-right: 5px;
 }
 .section_buy a{
